<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circular="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_live_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_8dp"
        android:text="@string/text_daily_consumption"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16dp"
        android:textStyle="bold" />

    <com.lylc.widget.circularprogressbar.CircularProgressBar
        android:id="@+id/circular_bar_live_weight"
        style="@style/Widget.ProgressBar.Holo.CircularProgressBar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/text_view_live_weight"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_5dp"
        circular:cpb_backgroundColor="@color/colorPrimaryDark"
        circular:cpb_progressColor="@color/colorAccent"
        circular:cpb_strokeWidth="25"
        circular:cpb_titleColor="@android:color/black" />

    <Button
        android:id="@+id/button_tar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/circular_bar_live_weight"
        android:layout_margin="@dimen/margin_10dp"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/padding_8dp"
        android:text="@string/text_reset"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16dp" />

    <Button
        android:id="@+id/button_remmove_jar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_tar"
        android:layout_alignBottom="@+id/button_tar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margin_10dp"
        android:background="@color/colorPrimaryDark"
        android:maxLines="1"
        android:padding="@dimen/padding_8dp"
        android:text="@string/text_remove_jar"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16dp" />

</RelativeLayout>